fix(condo): DOMA-11992 fix ui bugs in employee page on mobile screen

--- a/apps/condo/pages/employee/[id]/index.module.css
+++ b/apps/condo/pages/employee/[id]/index.module.css
@@ -2,4 +2,5 @@
   display: flex;
   gap: 4px;
   align-items: center;
+  flex-wrap: wrap;
 }
